# llvm-toy

./: .gitignore  CMakeLists.txt  src.toy
src/: abstract_syntax_tree.hpp  ast_node.hpp  ast_printer.cpp  ast_printer.hpp  ast_visitor.cpp  ast_visitor.hpp  character_class.cpp  character_class.hpp  expression.cpp  expression.hpp  function.hpp  integer_literal_node.cpp  integer_literal_node.hpp  lexer.cpp  lexer.hpp  lexer.l  lexical_scope.hpp  main.cpp  memory_allocation.cpp  memory_allocation.hpp  namespace.hpp  operator_types.hpp  parser.cpp  parser.hpp  parser_error.hpp  parser_precedence.hpp  statement.cpp  statement.hpp  test.l  token.cpp  token.hpp  value.cpp  value.hpp  yy.lex.cpp
src/ast/: assignment.hpp  binary_operator.hpp  boolean_literal.hpp  expression_statement.hpp  floating_point_literal.hpp  function_call.hpp  function_declaration.hpp  function_expression.hpp  if_statement.hpp  implementations.cpp  integer_literal.hpp  return_statement.hpp  string_literal.hpp  unary_operator.hpp  variable_declaration.hpp  variable_reference.hpp
src/data/: ast_nodes.yml  tokens.yml
src/interpreter/: ast_evaluator.cpp  ast_evaluator.hpp  interpreter.hpp  operator_action.cpp  operator_action.hpp  scope.cpp  scope.hpp
src/llvm_interpreter/: closure_container.hpp  debug_printer.cpp  debug_printer.hpp  function_object.hpp  llvm_builtins.cpp  llvm_builtins.hpp  llvm_interpreter.cpp  llvm_interpreter.hpp  llvm_ir_generator.cpp  llvm_ir_generator.hpp  llvm_jit_compiler.cpp  llvm_jit_compiler.hpp  llvm_scope.hpp
src/llvm_ir_generator/: llvm_ir_generator.cpp  llvm_ir_generator.hpp
src/templates/: ast_node.hpp.erb  lexer.l.erb  lexer_functions.cpp.erb  token_types.hpp.erb
test/: value_test.cpp
